welcome.lessons.welcome.array.search.SecondMaxValue.scala.error
max2Value:6: error: not enough arguments for method apply: (i: Int)Int in class Array.
Unspecified value parameter i.
      max=nums(i);nums()
                      ^